   * #2605000 - "Add descriptions to some buttons"
   * #2605133 - "Add access key to Log"
   * #2605140 - "Save Log-->Suggest Log.txt"
   * #2605146 - "When you open Log, the entries shouldn't be selected"
   * #2605148 - "CSR Processes: Add select all and/or ctrl+A"
   * #2605158 - "Log: Add Copy to clipboard and ctrl+A"
   * #2608710 - "Notifications menu improvements"
   * #2609039 - "Use thousands separator"
   * #2613838 - "Add process' icon before process' name in process' window"
   * KProcessHacker is now enabled by default
   * KProcessHacker now supports multiple clients at one time
   * Process termination now uses KProcessHacker
   * Process Hacker can now use KProcessHacker under a limited user account if it is 
     loaded, giving it full admin-like permissions to processes
   * Around 50% reduction in CPU usage
   * CSR Processes tool - displays hidden processes (this does not detect Hacker 
     Defender but does detect simple kernel-mode rootkits)
   * Processes list in the notification icon menu, for quick actions on processes
   * "Restart" function
   * "Set Token" function for Windows XP
   * "Verify File Signature" function
   * Options window has a detailed description for each setting
   * Process window has descriptions for each field
   * File processing (signature verification, checks for packed images) is now 
     asynchronous. This means that there are no more delays when starting 
     certain programs.
   * Slightly different notification icon
   * GDI and USER handle counts
 * FIXED:
   * Workaround for Bug #2553406 - "COMException: Class not registered"
   * Bug #2601383 - "Threads' column's width is not remembered."
   * Limited user account weirdness
   * No longer deletes the KProcessHacker service if it's already started
   * Process Hacker no longer requires UAC elevation
   * Memory searching now uses KProcessHacker if possible
   * Incorrect labeling of process files which can't be read (due to permissions) 
     as packed